src/objects/Caliber_Grade__c.object
<CustomObject>
    <fields>
        <fullName>Caliber_Assessment__c</fullName>
        <label>Caliber Assessment</label>
        <referenceTo>Caliber_Assessment__c</referenceTo>
        <relationshipLabel>Caliber Grades</relationshipLabel>
        <relationshipName>Caliber_Grades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Caliber Grades</relationshipLabel>
        <relationshipName>Caliber_Grades</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_At__c</fullName>
        <label>Last Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The actual number of raw points earned by the trainee for the assessment. Trainers typically enter a percentage on the UI such as 85.4%, but the score is transformed to the weighted score, for example (Max_Points__c * 0.854)</description>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Caliber Grade</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GRD-{0000000}</displayFormat>
        <label>Caliber Grade Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caliber Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>